# google-photos-archiver

./: .gitchangelog.rc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
google_photos_archiver/: album.py  archivers.py  cli.py  cli_utils.py  filters.py  media_item.py  media_item_archiver.py  media_item_recorder.py  rest_client.py
src/: GooglePhotosRESTClient.py  GooglePhotosRestClient.py  __init__.py  archivers.py  cli.py  cli_utils.py  filters.py  google_photos_archiver.py  main.py  media_item.py  media_item_archiver.py  media_item_recorder.py  oauth_handler.py  photo_downloader.py  rest_client.py
tests/: conftest.py  test_GooglePhotosRestClient.py  test_album.py  test_cli.py  test_cli_utils.py  test_filters.py  test_media_item.py  test_media_item_archiver.py  test_media_item_recorder.py  test_oauth_handler.py  test_rest_client.py
