[tool.poetry]
name = "google-photos-archiver"
version = "0.1.0"
description = ""
authors = ["Scott Ouellette <scottx611x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
google-auth-oauthlib = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-socket = "^0.3.5"
pytest-mock = "^3.4.0"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
