[tool.poetry]
name = "google-photos-archiver"
version = "0.1.0"
description = ""
authors = ["Scott Ouellette <scottx611x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.25.1"
google-auth-oauthlib = "^0.4.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-socket = "^0.3.5"
pytest-mock = "^3.4.0"
isort = "^5.6.4"
pylint = "^2.6.0"

[tool.poetry.scripts]
google-photos-archiver = 'src.google_photos_archiver:cli'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.semantic_release]
version_variable = "src/__init__.py:__version__"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
